# program-experiments

./: .gitignore
backup/dp2src_2006-04-04/: readme.txt
backup/linux-network-sources/03/: print.txt
backup/linux-network-sources/04/: ex04-1-getpid.c  ex04-1.c  ex04-2-exec.c  ex04-2-fork.c  ex04-2-sem.c  ex04-2-system.c  ex04-3-pipe.c  ex04-4-msg.c  ex04-5-mutex.c  ex04-5-pthread.c  ex04-5-sem.c  ex04-ipc-sem.c  ex04-ipc-shm.c  ex04-ipc-signal.c
backup/linux-network-sources/07/: Makefile  tcp_client.c  tcp_process.c  tcp_server.c
backup/linux-network-sources/08/: check_order.c  gethostby.c  getpeername.c  inet_pton.c  inet_xxx.c  issockettype.c  protocol_name.c  turn_order.c
backup/linux-network-sources/09/: Makefile  non_block.c  select.c  tcp_client.c  tcp_process.c
backup/linux-network-sources/10/: udp_client01.c  udp_client02.c  udp_connect.c  udp_interface.c  udp_server01.c  udp_server02.c
backup/linux-network-sources/11/: af_unix_client.c  af_unix_server.c  broadcast_01.c  broadcast_02.c  dhcp_c.c  dhcp_c.h  msg_control.c  multicast_01.c  multicast_02.c  open_file.c  unix_01.c  unix_02.c  unix_03.c  unix_domain.c
c-tips/: CMakeLists.txt  README.md  Record  demo.c
c-tips/tips01/: Tips01.c
c-tips/tips02/: Exam1Tips02.s  Exam2Tips02.s  Tips02.c  record
c-tips/tips03/: record
c-tips/tips03/stack/: g_stack.h  stack.h
c-tips/tips03/stack/impl1/: check_stackWithStaticArray.c  stackWithStaticArray.c
c-tips/tips03/stack/impl2/: check_stackWithDynamicArray.c  stackWithDynamicArray.c
c-tips/tips03/stack/impl3/: check_stackWithChained.c  stackWithChained.c
c-tips/tips03/stack/impl4/: g_stackClient.c
c-tips/tips04/: record
c-tips/tips04/queue/: queue.h
c-tips/tips04/queue/impl1/: queueWithStaticArray.c
c-tips/tips05/: record
c-tips/tips05/bstree/: bstree.h
c-tips/tips05/bstree/impl1/: bstreeWithStaticArray.c  check_bstreeWithStaticArray.c
c-tips/tips05/bstree/impl2/: bstreeWithChained.c  check_bstreeWithChained.c
c-tips/tips06/: record  tips06_01.c
c-tips/tips07/: record
c-tips/tips07/dict/: check_dict.c  dict.c  dict.h
c-tips/tips07/malloc/: check_malloc.c  zmalloc.c  zmalloc.h
c-tips/tips08/: record
c-tips/tips08/mem/: alloc.c  alloc.h  check_alloc.c
c-tips/tips08/sort/: checksort.c
c-tips/tips09/: record
c-tips/tips09/epoll/single/: epoll_single_client.c  epoll_single_server.c
c-tips/tips09/kevent/file/: kqueue_file_monitor.c
c-tips/tips09/kevent/multi/: kevent_demo_client.c  kevent_demo_server.c
c-tips/tips09/kevent/single/: kevent_single_client.c  kevent_single_server.c
c-tips/tips10/: record
c-tips/tips10/apis/: bytes.c
c-tips/tips10/tcp/simple/: tcp_simple_client.c  tcp_simple_server.c
c-vim-docker/: Dockerfile  README.md  vim.rc  vim_plugins_install.sh  ycm_extra_conf.py
clion-docker/: .gitignore  Dockerfile  README.md  main.cpp
cmake-tutorials/: README
cmake-tutorials/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-tutorials/Step2/: CMakeLists.txt  tutorial.cxx
cmake-tutorials/Step3/: CMakeLists.txt
cmake-tutorials/Step7/: CMakeLists.txt  tutorial.cxx
java-projects/: .gitignore  build.gradle  settings.gradle
java-projects/todo/: algs.txt  bochs.txt  concurrence.txt  disruptor.txt  distributed.txt  flink.txt  gradle.txt  java.txt  jdbc.txt  jdk.txt  kafka.txt  mongo.txt  mysql.txt  netty.txt  outline.txt  pattern.txt  performance.txt  redis.txt  spring.txt  tidb.txt  todo1  todo2  todo3  todo4.txt  todo5
java-projects/todo-organized/: outline.txt  performance.txt
linux-network/: CMakeLists.txt
linux-network/s001-hello/: CMakeLists.txt
make-experiments/: README.md
make-experiments/step1/: build.sh  clean.sh
make-experiments/step2/: build.sh  cau  clean.sh
make-experiments/step3/: makefile
make-experiments/step4/: makefile
make-experiments/step5/: makefile
make-experiments/step6/: makefile
make-experiments/step7/: main.c  makefile
nginx/experiments/: README.md
sources-reader/kafka-sources/: .gitignore  build.gradle
(+722 files in other folders)
